recolered borders, fixed picture stretch, implemented navbar

--- a/style.css
+++ b/style.css
@@ -99,17 +99,34 @@ body {
     margin-top: -5vh;
 }
 
+.image-div, .image-div-benu, .image-div-casper {
+    background: linear-gradient(transparent, transparent) padding-box,
+    linear-gradient(to right, #a0d4a6, #b67295) border-box;
+    border-radius: 46px;
+    border: 8px solid transparent;
+    height: fit-content;
+}
+
+.image-div-benu {
+    background: linear-gradient(transparent, transparent) padding-box,
+    linear-gradient(to right, #fba51a, #f6ed60) border-box;
+}
+
+.image-div-casper {
+    background: linear-gradient(transparent, transparent) padding-box,
+    linear-gradient(to right, #9a9a9a, #00dddd) border-box;
+}
+
 .image {
     width: 20vw;
-    border-radius: 5px;
-    border: 2px solid lightgray;
+    border-radius: 40px;
 }
 
 .pedro {
-    width: 50vw;
+    width: auto;
     height: 30vh;
-    border-radius: 5px;
-    border: 2.2px solid lightgray;
+    margin-top: 4px;
+    border-radius: 40px;
 }
 
 .to-right {
@@ -125,3 +142,31 @@ body {
 .flex {
     display: flex;
 }
+
+#header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #1a1a1a;
+    border-bottom: 1px solid #272829;
+    width: 100vw;
+    height: 10vh;
+    display: flex;
+    flex: wrap;
+}
+
+.header-button {
+    background-color: transparent;
+    border: 0px;
+    color: white;
+    font-size: 1.8em;
+    margin: auto;
+    height: 6vh;
+    font-family: "IsamiRi Display";
+}
+
+.header-button:hover {
+    color: #864fa2;
+    cursor: pointer;
+}
+
